Archive2/2e/8e224175e73373/output
main.cpp: In function 'int main()':
main.cpp:114:12: error: 'MMM' has not been declared
  auto ev = MMM::EventHandler::EventHandler_2<>::Create();
            ^
main.cpp:114:46: error: expected primary-expression before '>' token
  auto ev = MMM::EventHandler::EventHandler_2<>::Create();
                                              ^
main.cpp:114:47: error: '::Create' has not been declared
  auto ev = MMM::EventHandler::EventHandler_2<>::Create();
                                               ^
main.cpp:137:49: warning: format '%u' expects argument of type 'unsigned int', but argument 2 has type 'std::__success_type<std::chrono::duration<long int, std::ratio<1l, 1000000000l> > >::type {aka std::chrono::duration<long int, std::ratio<1l, 1000000000l> >}' [-Wformat=]
  printf("time took: %u\n", end_time - start_time);
                                                 ^
main.cpp:118:15: warning: unused variable 't' [-Wunused-variable]
  std::tuple<> t;
               ^
main.cpp: In function 'int main()':
main.cpp:144:5: error: redefinition of 'int main()'
 int main()
     ^
main.cpp:113:5: note: 'int main()' previously defined here
 int main(){
     ^
